--- a/_data/locales/en.yml
+++ b/_data/locales/en.yml
@@ -15,7 +15,7 @@ tabs:
   tags: Tags
   archives: Timeline
   about: About
-
+  picoctf: PicoCTF
 # the text displayed in the search bar & search results
 search:
   hint: search
