--- a/_posts/2025-07-25-head-dump.md
+++ b/_posts/2025-07-25-head-dump.md
@@ -3,7 +3,7 @@ layout: post
 title: "Head-Dump"
 date: 2025-07-25
 categories: [PicoCTF]
-tags: [picoctf, webexploitation, ctf]
+tags: [picoctf, webexploitation,Easy]
 ---
 ## Challenge Description
 "Welcome to the challenge! In this challenge, you will explore a web application and find an endpoint that exposes a file containing a hidden flag.
