--- a/_posts/2025-07-29-logon.md
+++ b/_posts/2025-07-29-logon.md
@@ -3,7 +3,7 @@ layout: post
 title: "LogOn"
 date: 2025-07-29
 categories: [PicoCTF]
-tags: [picoctf, webexploitation, ctf]
+tags: [picoctf, webexploitation,Easy]
 ---
 
 ### 🕵️  Description:
