--- a/_posts/2025-07-25-unminify.md
+++ b/_posts/2025-07-25-unminify.md
@@ -3,7 +3,7 @@ layout: post
 title: "Unminify"
 date: 2025-07-25
 categories: [PicoCTF]
-tags: [picoctf, webexploitation, ctf]
+tags: [picoctf, webexploitation,Easy]
 ---
 
 ## 🧼 Challenge Description
