--- a/_posts/2025-07-26-Includes.md
+++ b/_posts/2025-07-26-Includes.md
@@ -3,7 +3,7 @@ layout: post
 title: "Includes"
 date: 2025-07-26
 categories: [PicoCTF]
-tags: [picoctf, webexploitation, ctf]
+tags: [picoctf, webexploitation,Easy]
 ---
 
 ## 🧩 Challenge Description
