--- a/_posts/2025-07-31-cookies.md
+++ b/_posts/2025-07-31-cookies.md
@@ -6,10 +6,7 @@ categories: [PicoCTF]
 tags: [picoctf, webexploitation,Easy]
 ---
 
-
-# 🟤 Challenge #8: Cookies
-
-**Description:**
+## 🟤 Challenge Description
 
 > Who doesn't love cookies? Try to figure out the best one.
 
