--- a/_posts/2025-08-05-SSTI1.md
+++ b/_posts/2025-08-05-SSTI1.md
@@ -10,8 +10,7 @@ tags: [picoctf, webexploitation,Easy]
 # 🧠 Challenge Name: **SSTI**
 
 ## 📝 Description
-> I made a cool website where you can announce whatever you want! Try it out!  
-> I heard templating is a cool and modular way to build web apps!
+**I made a cool website where you can announce whatever you want! Try it out! I heard templating is a cool and modular way to build web apps!**
 
 ---
 
