crypto-guide-commit(E)

--- a/_posts/2025-07-25-unminify.md
+++ b/_posts/2025-07-25-unminify.md
@@ -2,7 +2,7 @@
 layout: post
 title: "Unminify"
 date: 2025-07-25
-categories: [PicoCTF]
+categories: [PicoCTF, webexploitation]
 tags: [picoctf, webexploitation,Easy]
 ---
 
