--- a/_posts/2025-07-29-logon.md
+++ b/_posts/2025-07-29-logon.md
@@ -2,7 +2,7 @@
 layout: post
 title: "LogOn"
 date: 2025-07-29
-categories: [PicoCTF]
+categories: [PicoCTF, webexploitation]
 tags: [picoctf, webexploitation,Easy]
 ---
 
