--- a/_posts/2025-08-01-login.md
+++ b/_posts/2025-08-01-login.md
@@ -2,7 +2,7 @@
 layout: post
 title: "Login"
 date: 2025-08-01
-categories: [PicoCTF]
+categories: [PicoCTF, webexploitation]
 tags: [picoctf, webexploitation,Medium]
 ---
 
