--- a/_posts/2025-08-05-SSTI1.md
+++ b/_posts/2025-08-05-SSTI1.md
@@ -2,7 +2,7 @@
 layout: post
 title: "SSTI1"
 date: 2025-08-05
-categories: [PicoCTF]
+categories: [PicoCTF, webexploitation]
 tags: [picoctf, webexploitation,Easy]
 ---
 
