--- a/_posts/2025-07-25-head-dump.md
+++ b/_posts/2025-07-25-head-dump.md
@@ -2,7 +2,7 @@
 layout: post
 title: "Head-Dump"
 date: 2025-07-25
-categories: [PicoCTF]
+categories: [PicoCTF, webexploitation]
 tags: [picoctf, webexploitation,Easy]
 ---
 ## Challenge Description
