--- a/_posts/2025-07-26-Includes.md
+++ b/_posts/2025-07-26-Includes.md
@@ -2,7 +2,7 @@
 layout: post
 title: "Includes"
 date: 2025-07-26
-categories: [PicoCTF]
+categories: [PicoCTF, webexploitation]
 tags: [picoctf, webexploitation,Easy]
 ---
 
