--- a/_posts/2025-07-31-cookies.md
+++ b/_posts/2025-07-31-cookies.md
@@ -2,7 +2,7 @@
 layout: post
 title: "Cookies"
 date: 2025-07-31
-categories: [PicoCTF]
+categories: [PicoCTF, webexploitation]
 tags: [picoctf, webexploitation,Easy]
 ---
 
