--- a/_posts/2025-08-03-secrets.md
+++ b/_posts/2025-08-03-secrets.md
@@ -2,7 +2,7 @@
 layout: post
 title: "Secrets"
 date: 2025-08-03
-categories: [PicoCTF]
+categories: [PicoCTF, webexploitation]
 tags: [picoctf, webexploitation,Medium]
 ---
 
